# onboarding_tests.yaml
appId: com.lift.bro

---
- launchApp
- runFlow:
    file: flows/skip_onboarding_with_backup.yaml

- tapOn: "Calendar"
- assertVisible: "September - 2025"

- tapOn: "Previous Month"
- assertVisible: "August - 2025"

- tapOn: "Next Month"
- assertVisible: "September - 2025"

- assertVisible: "Tuesday, Sept 2 - 2025"
- assertVisible: "Start a Workout!"
- tapOn: "Start a Workout!"
- assertVisible: "Add Warmup"
- tapOn: "Back"
- tapOn: "25"


- scrollUntilVisible:
      element:
          text: "DB Bench Press"
- assertVisible: "No max"
- assertVisible: "95 lbs x 5"
- tapOn: "Zercher Squat"
- assertVisible: "5 x 95 lbs"

- tapOn: "Back"

- tapOn: "Edit Daily Notes"
- assertVisible: "Save"