appId: com.lift.bro

---
- clearState
- launchApp
- extendedWaitUntil:
      timeout: 10000
      visible: "Lift Bro With A Ponytail"
- tapOn: "Lift Bro With A Ponytail"
- scrollUntilVisible:
    element:
      text: "Continue"
- tapOn: "Continue"
